--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/styles/main.css" />
+    <link rel="stylesheet" href="./src/assets/styles/main.css" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home</title>
